--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>khudka.ai - Ultimate Gemini AI Chatbot</title>
+    <title>khudka.ai</title>
     <meta name="description" content="Talk with AI like never before – for free! Ultimate Gemini AI Chatbot Web App" />
     <meta name="author" content="khudka.ai" />
 
